--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="upload">Upload</string>
     <string name="start_capture">Start Capture</string>
     <string name="stop_capture">Stop Capture</string>
+    <string name="select">Select a gesture to continue.</string>
+    <string name="select_a_gesture_to_continue">Select a gesture to continue</string>
 </resources>
